2007-08-12 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* AUTHORS: added Anton Blad (for new devices) and Nick Hibma
	  (for bug fixes) to the list of contributors.
	* configure.ac: Incremented the release number
	* docs/dfu-programmer.1: Added at90usb162 and at90usb82
	  devices
	* dfu-programmer.spec.in: Added the newly supported chips
	* NEWS: Updated the latest news about the 0.4.3 release
	* src/arguments.c, src/arguments.h: Applied the patch that
	  Anton Blad provided to add support for the at90usb162
	  and at90usb82.

2007-07-22 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* src/atmel.c: Fix the incorrect status to string conversion
	  that Nick Hibma found and pointed out.
	* dfu-programmer.spec.in: Updating the file to be compliant
	  with the Fedora requirements for packaging (again)

2007-07-07 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.2 release
	* dfu-programmer.spec.in: Updating the file to be compliant
	  with the Fedora requirements for packaging

2007-04-29 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* configure.ac: Incremented the release number
	* NEWS: Updated the latest news about the 0.4.1 release

2007-04-25 Weston Schmidt <weston_schmidt AT alumni.purdue.edu>

	* docs/dfu-programmer.1: Added a KNOWN ISSUES section,
	  updated the BUGS section, and corrected the Free
	  Software Foundation address.
	* src/arguments.c: Adjusted the memory sizes for the at90
	  series of chips so they can take advantage of the entire
	  amount of flash memory.
	* src/atmel.c, src/atmel.h: Add the concept and support for
	  paged flash memory.  I added this so that only devices
	  that actually go into paged memory will try to make calls
	  to the memory paging routine.  I also did a bit of cleanup
	  to allow a clean transition between the pages (so there
	  are not regions of memory being flashed that overlap a